{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 187,
  "lineage": "f241ca55-554a-eb5c-6e7c-c92e790bfc15",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cfc1989d0a946375",
            "arn": "arn:aws:ec2:us-east-1:885071088198:elastic-ip/eipalloc-0cfc1989d0a946375",
            "association_id": "eipassoc-0f2d7f090372ba305",
            "domain": "vpc",
            "id": "eipalloc-0cfc1989d0a946375",
            "network_border_group": "us-east-1",
            "network_interface": "eni-071ab6adf36a6c133",
            "private_dns": "ip-10-0-1-41.ec2.internal",
            "private_ip": "10.0.1.41",
            "public_dns": "ec2-54-159-77-188.compute-1.amazonaws.com",
            "public_ip": "54.159.77.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-nat-eip"
            },
            "tags_all": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885071088198:internet-gateway/igw-02e52c6b727bf1c65",
            "id": "igw-02e52c6b727bf1c65",
            "owner_id": "885071088198",
            "tags": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-igw"
            },
            "tags_all": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-igw"
            },
            "vpc_id": "vpc-00e2a7445fe2a5a4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:885071088198:loadbalancer/app/inboxleap-us-production-alb/05f8faa5e4114bf7",
            "arn_suffix": "app/inboxleap-us-production-alb/05f8faa5e4114bf7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "inboxleap-us-production-alb-1234515798.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:885071088198:loadbalancer/app/inboxleap-us-production-alb/05f8faa5e4114bf7",
            "idle_timeout": 3600,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "inboxleap-us-production-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0683cf7059bdbc2f7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0673a7bf593d6d6ae"
              },
              {
                "subnet_id": "subnet-067aaede27f0de347"
              }
            ],
            "subnets": [
              "subnet-0673a7bf593d6d6ae",
              "subnet-067aaede27f0de347"
            ],
            "tags": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform"
            },
            "tags_all": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform"
            },
            "vpc_id": "vpc-00e2a7445fe2a5a4f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:885071088198:listener/app/inboxleap-us-production-alb/05f8faa5e4114bf7/7910bfff50ec8d00",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:885071088198:listener/app/inboxleap-us-production-alb/05f8faa5e4114bf7/7910bfff50ec8d00",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:885071088198:loadbalancer/app/inboxleap-us-production-alb/05f8faa5e4114bf7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:885071088198:listener/app/inboxleap-us-production-alb/05f8faa5e4114bf7/d77c4880c3209202",
            "certificate_arn": "arn:aws:acm:us-east-1:885071088198:certificate/3cd6efe5-5fc1-4b80-9b39-95ed828b00df",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:885071088198:targetgroup/inboxleap-us-frontend-tg/6614e1678e8a1bad",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:885071088198:listener/app/inboxleap-us-production-alb/05f8faa5e4114bf7/d77c4880c3209202",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:885071088198:loadbalancer/app/inboxleap-us-production-alb/05f8faa5e4114bf7",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.main",
            "aws_acm_certificate_validation.main",
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_route53_record.cert_validation",
            "aws_route53_zone.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:885071088198:targetgroup/inboxleap-us-backend-tg/08ed00278ece60cb",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:885071088198:listener-rule/app/inboxleap-us-production-alb/05f8faa5e4114bf7/d77c4880c3209202/a7aefeb5f788bd30",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:885071088198:listener-rule/app/inboxleap-us-production-alb/05f8faa5e4114bf7/d77c4880c3209202/a7aefeb5f788bd30",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:885071088198:listener/app/inboxleap-us-production-alb/05f8faa5e4114bf7/d77c4880c3209202",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.main",
            "aws_acm_certificate_validation.main",
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_route53_record.cert_validation",
            "aws_route53_zone.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:885071088198:targetgroup/inboxleap-us-backend-tg/08ed00278ece60cb",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:885071088198:listener-rule/app/inboxleap-us-production-alb/05f8faa5e4114bf7/d77c4880c3209202/4a0a426bd318b7a0",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/ws*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:885071088198:listener-rule/app/inboxleap-us-production-alb/05f8faa5e4114bf7/d77c4880c3209202/4a0a426bd318b7a0",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:885071088198:listener/app/inboxleap-us-production-alb/05f8faa5e4114bf7/d77c4880c3209202",
            "priority": 110,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.main",
            "aws_acm_certificate_validation.main",
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_route53_record.cert_validation",
            "aws_route53_zone.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:885071088198:targetgroup/inboxleap-us-backend-tg/08ed00278ece60cb",
            "arn_suffix": "targetgroup/inboxleap-us-backend-tg/08ed00278ece60cb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200-399",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:885071088198:targetgroup/inboxleap-us-backend-tg/08ed00278ece60cb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:885071088198:loadbalancer/app/inboxleap-us-production-alb/05f8faa5e4114bf7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "inboxleap-us-backend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform"
            },
            "tags_all": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00e2a7445fe2a5a4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:885071088198:targetgroup/inboxleap-us-frontend-tg/6614e1678e8a1bad",
            "arn_suffix": "targetgroup/inboxleap-us-frontend-tg/6614e1678e8a1bad",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:885071088198:targetgroup/inboxleap-us-frontend-tg/6614e1678e8a1bad",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:885071088198:loadbalancer/app/inboxleap-us-production-alb/05f8faa5e4114bf7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "inboxleap-us-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform"
            },
            "tags_all": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00e2a7445fe2a5a4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cfc1989d0a946375",
            "association_id": "eipassoc-0f2d7f090372ba305",
            "connectivity_type": "public",
            "id": "nat-0dacf4d9cad06924c",
            "network_interface_id": "eni-071ab6adf36a6c133",
            "private_ip": "10.0.1.41",
            "public_ip": "54.159.77.188",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0673a7bf593d6d6ae",
            "tags": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-nat-gw"
            },
            "tags_all": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885071088198:route-table/rtb-0b3295175b584e0e7",
            "id": "rtb-0b3295175b584e0e7",
            "owner_id": "885071088198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dacf4d9cad06924c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-private-rt"
            },
            "tags_all": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e2a7445fe2a5a4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885071088198:route-table/rtb-0b2d5ea4b3ae31c92",
            "id": "rtb-0b2d5ea4b3ae31c92",
            "owner_id": "885071088198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e52c6b727bf1c65",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-public-rt"
            },
            "tags_all": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e2a7445fe2a5a4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5e7f68267f1fbd2",
            "route_table_id": "rtb-0b3295175b584e0e7",
            "subnet_id": "subnet-0e3ca0d7edc509e72"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce4884f920d8f7bc",
            "route_table_id": "rtb-0b3295175b584e0e7",
            "subnet_id": "subnet-010d1cf6c5b1f8975"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dce28eb6ba71f15a",
            "route_table_id": "rtb-0b2d5ea4b3ae31c92",
            "subnet_id": "subnet-0673a7bf593d6d6ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4d2a138a73cef4e",
            "route_table_id": "rtb-0b2d5ea4b3ae31c92",
            "subnet_id": "subnet-067aaede27f0de347"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885071088198:security-group/sg-0683cf7059bdbc2f7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0683cf7059bdbc2f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "inboxleap-us-production-alb-20250813030840218800000005",
            "name_prefix": "inboxleap-us-production-alb-",
            "owner_id": "885071088198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-alb-sg"
            },
            "tags_all": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e2a7445fe2a5a4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885071088198:security-group/sg-0b8fdcdb382aa123e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8fdcdb382aa123e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Frontend from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0683cf7059bdbc2f7"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0683cf7059bdbc2f7"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "inboxleap-us-production-ecs-20250813030846529500000007",
            "name_prefix": "inboxleap-us-production-ecs-",
            "owner_id": "885071088198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-ecs-sg"
            },
            "tags_all": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e2a7445fe2a5a4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885071088198:subnet/subnet-0e3ca0d7edc509e72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3ca0d7edc509e72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885071088198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-private-subnet-1",
              "Type": "private"
            },
            "tags_all": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-private-subnet-1",
              "Type": "private"
            },
            "vpc_id": "vpc-00e2a7445fe2a5a4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885071088198:subnet/subnet-010d1cf6c5b1f8975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010d1cf6c5b1f8975",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885071088198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-private-subnet-2",
              "Type": "private"
            },
            "tags_all": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-private-subnet-2",
              "Type": "private"
            },
            "vpc_id": "vpc-00e2a7445fe2a5a4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885071088198:subnet/subnet-0673a7bf593d6d6ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0673a7bf593d6d6ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "885071088198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-public-subnet-1",
              "Type": "public"
            },
            "vpc_id": "vpc-00e2a7445fe2a5a4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885071088198:subnet/subnet-067aaede27f0de347",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067aaede27f0de347",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "885071088198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-public-subnet-2",
              "Type": "public"
            },
            "vpc_id": "vpc-00e2a7445fe2a5a4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:885071088198:vpc/vpc-00e2a7445fe2a5a4f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02f3cae049add552a",
            "default_route_table_id": "rtb-0ffc16b529d785cff",
            "default_security_group_id": "sg-070b4bd1a3e2f40f5",
            "dhcp_options_id": "dopt-0589161ac7927d1d5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00e2a7445fe2a5a4f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ffc16b529d785cff",
            "owner_id": "885071088198",
            "tags": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-vpc"
            },
            "tags_all": {
              "Application": "inboxleap-us",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "inboxleap-us-production-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}